--- a/assets/admin/sass/cherry-popups-admin-styles.scss
+++ b/assets/admin/sass/cherry-popups-admin-styles.scss
@@ -1,37 +1,85 @@
-#main-page-content{
-	padding:30px;
-	color: #96989a;
-	font-style: italic;
+$padding: 10px;
+
+.cherry-popup-tabs-wrapper{
+	&.cherry-component{
+		padding: 5px;
+	}
 }
 
-//custom html button
-.custom-button{
-	padding: 16px 30px;
-	display: inline-block;
-	background-color: #C5C5C5;
-	font-weight: 900;
-	text-transform: uppercase;
-	color: #fff;
-	box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.2);
-	cursor: pointer;
-	border-radius: 4px;
-	margin-right: 20px;
-	&.save-button{
-		background-color: #48c569;
-			&:hover{
-				background-color: #3ba956;
+.option-page-footer{
+	padding: $padding;
+	display: flex;
+	justify-content: flex-end;
+	@media ( min-width: 783px ) {
+		padding: $padding * 1.5;
+	}
+	@media ( min-width: 961px ) {
+		padding: $padding * 3;
+	}
+	button{
+		margin-left: 20px;
+		position: relative;
+		&:first-child{
+			margin-left: 0;
+		}
+		.text{
+			transition: opacity 0.7s ease;
+		}
+		.icon, .loader-wrapper{
+			opacity: 0;
+			transform: scale(0);
+			transition: opacity 0.5s ease, transform 0.5s ease;
+		}
+		.icon {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			font-size: 40px;
+			width: 40px;
+			height: 40px;
+			margin: -20px 0 0 -20px;
+		}
+		.loader-wrapper{
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 20px;
+			height: 20px;
+			margin: -13px 0 0 -13px;
+		}
+		.loader {
+			width: 20px;
+			height: 20px;
+			border: 3px solid #ffffff;
+			border-top: 3px solid #3498db;
+			border-radius: 50%;
+			display: block;
+			animation: spin 0.7s linear infinite;
+		}
+
+		&[disabled], &.success{
+			cursor: default;
+			pointer-events: none;
+			.text{
+				opacity: 0;
 			}
-	}
-	&.restore-button{
-		background-color: #495159;
-			&:hover{
-				background-color: #282D31;
+		}
+		&[disabled]{
+			.loader-wrapper{
+				opacity: 1;
+				transform: scale(1);
 			}
-	}
-	&:last-child{
-		margin-right: 0;
-	}
-	&:hover{
-		background-color: #3ba956;
+		}
+		&.success{
+			.icon{
+				opacity: 1;
+				transform: scale(1);
+				transition-delay: 0.1s;
+			}
+		}
+		@keyframes spin {
+			0% { transform: rotate(0deg); }
+			100% { transform: rotate(360deg); }
+		}
 	}
 }
