--- a/assets/css/cherry-popups-styles.css
+++ b/assets/css/cherry-popups-styles.css
@@ -356,6 +356,10 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-flow: row nowrap;
@@ -373,13 +377,16 @@
   -webkit-flex: 0 1 auto;
   -ms-flex: 0 1 auto;
   flex: 0 1 auto;
-  padding: 10px 20px;
+  padding: 10px 40px;
   margin-left: 10px;
-  border-width: 2px;
-  border-style: solid;
-  border-color: #23282d;
-  color: #23282d;
+  color: white;
+  cursor: pointer;
+  background-color: #298ffc;
+  border-radius: 20px;
+  display: inline-block;
   cursor: pointer; }
+  .cherry-popup-subscribe__submit:hover {
+    background-color: #206ff4; }
 
 .cherry-popup-subscribe__message {
   display: none; }
@@ -388,35 +395,70 @@
   .cherry-popup-subscribe__message.success-type span {
     color: #48c569; }
 
+.cherry-popup-login input[type="text"],
+.cherry-popup-login input[type="password"] {
+  width: 100%; }
+
+.cherry-popup-login label {
+  margin-bottom: 0.5em;
+  display: inline-block; }
+
 .cherry-popup-login__input-group {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-flow: row nowrap;
-  -ms-flex-flow: row nowrap;
-  flex-flow: row nowrap; }
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch; }
 
-.cherry-popup-login__input {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto; }
+.cherry-popup-login__wrap {
+  margin-bottom: 1em; }
+  .cherry-popup-login__wrap:last-child {
+    margin-bottom: 0; }
 
-.cherry-popup-login__submit {
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 1 auto;
-  -ms-flex: 0 1 auto;
-  flex: 0 1 auto;
-  padding: 10px 20px;
-  margin-left: 10px;
-  border-width: 2px;
-  border-style: solid;
-  border-color: #23282d;
-  color: #23282d;
-  cursor: pointer; }
+.cherry-popup-login__login-in {
+  padding: 10px 40px;
+  color: white;
+  cursor: pointer;
+  background-color: #298ffc;
+  border-radius: 20px;
+  display: inline-block; }
+  .cherry-popup-login__login-in:hover {
+    background-color: #206ff4; }
+
+.cherry-popup-login__remember {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .cherry-popup-login__remember.active .cherry-popup-login__remember-input span {
+    display: block; }
+  .cherry-popup-login__remember-input {
+    width: 21px;
+    height: 21px;
+    display: inline-block;
+    position: relative;
+    border-radius: 3px;
+    background-color: #f7fafd;
+    border: 1px solid #e0e0e8;
+    margin-right: 5px;
+    cursor: pointer; }
+    .cherry-popup-login__remember-input span {
+      top: 0;
+      left: 0;
+      color: #298ffc;
+      display: none; }
 
 .cherry-popup-login__message {
   display: none; }
@@ -453,7 +495,6 @@
     min-width: 300px;
     min-height: 300px;
     max-height: 90%;
-    padding: 50px 0;
     background-color: white;
     -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
@@ -461,7 +502,6 @@
     .cherry-popup-wrapper .cherry-popup-container__inner {
       overflow-y: auto;
       position: relative;
-      margin: 0 18px 0 20px;
       height: 100%; }
       .cherry-popup-wrapper .cherry-popup-container__inner::-webkit-scrollbar {
         width: 4px;
@@ -507,21 +547,18 @@
     transition: all 0.3s ease; }
     .cherry-popup-wrapper .cherry-popup-close-button:hover {
       color: #e54343; }
-  .cherry-popup-wrapper .cherry-popup-show-again-check {
+  .cherry-popup-wrapper .cherry-popup-check {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     height: 20px;
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none; }
-    .cherry-popup-wrapper .cherry-popup-show-again-check .marker {
+    .cherry-popup-wrapper .cherry-popup-check .marker {
       width: 20px;
       height: 20px;
       display: inline-block;
@@ -530,24 +567,28 @@
       border-radius: 2px;
       -webkit-transition: all 300ms ease-in-out;
       transition: all 300ms ease-in-out; }
-      .cherry-popup-wrapper .cherry-popup-show-again-check .marker span {
+      .cherry-popup-wrapper .cherry-popup-check .marker span {
         width: 20px;
         height: 20px;
         font-size: 22px;
         color: #ffffff;
         display: none; }
-        .cherry-popup-wrapper .cherry-popup-show-again-check .marker span:before {
+        .cherry-popup-wrapper .cherry-popup-check .marker span:before {
           position: relative;
-          left: -2px;
+          left: -1px;
           top: -1px; }
-    .cherry-popup-wrapper .cherry-popup-show-again-check .label {
+    .cherry-popup-wrapper .cherry-popup-check .label {
       display: inline-block;
       font-size: 12px;
       line-height: 20px; }
-    .cherry-popup-wrapper .cherry-popup-show-again-check.checked .marker {
+    .cherry-popup-wrapper .cherry-popup-check.checked .marker {
       background-color: #48c569; }
-      .cherry-popup-wrapper .cherry-popup-show-again-check.checked .marker span {
+      .cherry-popup-wrapper .cherry-popup-check.checked .marker span {
         display: block; }
+  .cherry-popup-wrapper .cherry-popup-show-again-check {
+    position: absolute;
+    bottom: 10px;
+    left: 10px; }
   .cherry-popup-wrapper.overlay-disabled-type {
     pointer-events: none; }
     .cherry-popup-wrapper.overlay-disabled-type .cherry-popup-overlay {
