--- a/assets/sass/_tm_mixins.scss
+++ b/assets/sass/_tm_mixins.scss
@@ -131,3 +131,11 @@
   $opacity-ie: ($opacity * 100);
   filter: #{alpha(opacity=$opacity-ie)};
 }
+
+@mixin font-awesome-icon {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
