--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -2,9 +2,9 @@ $dark_color_1: #23282d;
 $dark_color_2: #495159;
 $dark_color_2_h: #393f45;
 $grey_color_1: #96989a;
-$grey_color_2: #e5e5e5;
-$grey_color_3: #f1f1f1;
-$grey_color_4: #b4b7ba;
+$grey_color_2: #9ba0a3;
+$grey_color_3: #e5e5e5;
+$grey_color_4: #9ba0a3;
 $blue_color: #298ffc;
 $blue_color_h: #206ff4;
 $green_color: #48c569;
@@ -13,6 +13,8 @@ $red_color: #e54343;
 $red_color_h: #c73434;
 $orange_color: #faa730;
 $orange_color_h: #ee8425;
+
+$input_border_color: #c9cdcf;
 
 $border_radius_extra_small: 2px;
 $border_radius_small: 4px;
