--- a/assets/sass/_login-form-styles.scss
+++ b/assets/sass/_login-form-styles.scss
@@ -69,6 +69,11 @@
 			}
 		}
 
+		&__already-message {
+			display: flex;
+			justify-content: center;
+		}
+
 		.cherry-popup-login__signup-message {
 			display: flex;
 			justify-content: center;
